@@ -1,9 +1,17 @@
+[b][color=orange]v3.35[/color], 29.08.2018[/b][list]
+[*]Skin extra CharacterStatsPane from S&L Armory Mode.
+[*]Updated LocPanel & MicroBar combat hide options.
+[*]Show/hide the bags if the ScrappingMachine Frame is shown. Thx Whiro
+[*]Fix a possible error if the panels table doesn't exist. Thx Whiro
+[*]Added BfA Augementation Rune to the RaidBuffs.
+[*]A lot of skin updates.[/list]
+
 [b][color=orange]v3.34[/color], 22.08.2018[/b][list]
 [*]Fixed an issue that the Changelog wasn't showing on version bumb.
 [*]Added the option back to hide the Coords on the LocPanel.
 [*]Ajust some DataTexts in my install.
 [*]Add some frames to the E.FrameLocks. This will hide correctly some frames in Pet Battles.
-[*]Some skin adjustments.[list]
+[*]Some skin adjustments.[/list]
 
 [b][color=orange]v3.33[/color], 20.08.2018[/b][list]
 [*]Update EFL.
